<resources>
    <string name="app_name">Monitoreo</string>
    <string name="e_inicio_sesion">Iniciar Sesión</string>
    <string name="e_correo_electronico">Correo electrónico:</string>
    <string name="e_contra">Contraseña:</string>
    <string name="e_olvido_contra">¿Ha olvidado su contraseña?</string>
    <string name="e_nuevo">Eres nuevo, regístrate</string>
    <string name="e_registrar">Registrarse</string>
    <string name="e_nombre">Nombre:</string>
    <string name="e_app">Apellido paterno:</string>
    <string name="e_apm">Apelldio materno:</string>
    <string name="e_recuperar">Recuperar contraseña</string>
    <string name="e_enviar">Enviar</string>
    <string name="e_imagen">Imagen de la alerta</string>
    <string name="b_descargar">Descargar</string>
    <string name="e_agregar">Agregar hijo</string>
    <string name="e_fecha">Fecha de nacimiento:</string>
    <string name="b_guardar">Guardar</string>
    <string name="e_edad">Edad</string>
    <string name="e_dispositivo">Dispositivo:</string>
    <string name="e_tutor_e">Correo del tutor:</string>
    <string name="e_hijo">Hijo</string>
    <string name="e_tipo_a">Tipo de alerta</string>
    <string name="e_hora">Hora</string>
    <string name="e_imagena">Imagen</string>
    <string name="b_ver">Ver</string>
    <string name="e_cuenta">Cuenta</string>
    <string name="b_cerrar">Cerrar Sesión</string>
    <string name="b_configurar">Configurar</string>
    <string name="e_nueva_c">Nueva Contraseña</string>
    <string name="e_hijos">HIJOS</string>
    <string name="b_agregar">AGREGAR HIJO</string>
    <string name="e_nombre_h">Hector Hernandez Martínez</string>
    <string name="e_seleccion">Seleccione hijo a monitorear en este dispositivo</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="e_informacion">INFORMACIÓN</string>
    <string name="e_historial">Historial de alertas</string>
    <string name="b_modificar">MODIFICAR</string>
    <string name="b_eliminar">ELIMINAR</string>
    <string name="e_modificar">Modificar Información</string>
    <string name="e_nueva_contra">Nueva contraseña</string>
    <string name="e_imagen_a">Imagen de la alerta</string>
    <string name="b_descargar_i">Descargar</string>
</resources>