<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".fragments.Configuracion"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/goblin_one"
        android:text="@string/e_cuenta"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:fontFamily="@font/acme"
        android:text="@string/e_nombre"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtCfN"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_correo_electronico"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtCfC"
        android:layout_width="292dp"
        android:layout_height="52dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_edad"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtCfE"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/b_configurar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCerrarS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/b_cerrar"
        android:textSize="24sp" />
</LinearLayout>