<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".ModificarDatos"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goblin_one"
        android:text="@string/e_modificar"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_nombre"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtMN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_app"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtMAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_apm"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtMAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_edad"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_nueva_contra"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtMNC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPassword"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_contra"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtCA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPassword"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/bntGMT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/b_guardar"
        android:textSize="20sp" />
</LinearLayout>