<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|clip_vertical|center_horizontal|center_vertical"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".ui.ModificarHijo"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goblin_one"
        android:text="@string/e_modificar"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_nombre"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editNH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_app"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_apm"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_edad"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editEH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPersonName"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnMDH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/b_guardar" />
</LinearLayout>