<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goblin_one"
        android:text="@string/e_inicio_sesion"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_correo_electronico"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editCorreoI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_contra"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editPassI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/e_inicio_sesion"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:onClick="comeRecuperar"
        android:text="@string/e_olvido_contra"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:onClick="comeRegistrar"
        android:text="@string/e_nuevo"
        android:textSize="24sp"
        android:textColor="@color/black"/>
</LinearLayout>