<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Gestionar">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:gravity="center|center_horizontal|center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_hijo"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_tipo_a"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_hora"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/b_ver"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>
</FrameLayout>