<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    tools:context=".fragments.Alertas">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:gravity="center|center_horizontal|center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_hijo"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_tipo_a"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_hora"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/goblin_one"
                android:text="@string/e_imagena"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</FrameLayout>